--- a/parsimony.ipynb
+++ b/parsimony.ipynb
@@ -2,11 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  _____________________________________ AYP10410_2014/08/22\n",
+      " |\n",
+      " |_____________________________________ AYP10427_2014/08/20\n",
+      " |\n",
+      "_|                     ___________ AYP10417_2014/08/22\n",
+      " |                    |\n",
+      " |                    |     _______ AJA04398_2014/08/20\n",
+      " |____________________|    |\n",
+      "                      |    |   , AYP10349_2014/08/22\n",
+      "                      |    |   |\n",
+      "                      |    |   , AYP10358_2014/08/26\n",
+      "                      |____|   |\n",
+      "                           |   , AYP10331_2014/09/08\n",
+      "                           |   |\n",
+      "                           |   | AKI84252_2014/08/16\n",
+      "                           |   |\n",
+      "                           |___, AYG85355_2018/05/11\n",
+      "                               |\n",
+      "                               | AXP07378_2018/05/10\n",
+      "                               |\n",
+      "                               |, AKB09542_1976/10/01\n",
+      "                               ||\n",
+      "                               || APT69582_1976\n",
+      "                               ||\n",
+      "                               || APT69541_1976\n",
+      "                               ||\n",
+      "                               |, AWU50984_2017/05/07\n",
+      "                               ||\n",
+      "                               || AKB09551_1995/04/01\n",
+      "                               ||\n",
+      "                               |, AER59714_2007/08/31\n",
+      "                               ||\n",
+      "                                | AJT59738_2003\n",
+      "                                |\n",
+      "                                |       , AYN74100_2018/08/13\n",
+      "                                |      ,|\n",
+      "                                |      |, AYN74136_2018/08/14\n",
+      "                                |______||\n",
+      "                                       || AYN74046_2018/07/27\n",
+      "                                       |\n",
+      "                                       |________________ AGL73450_2012\n",
+      "\n",
+      "((AYP10410_2014/08/22:0.45399,AYP10427_2014/08/20:0.45399)Inner19:0.00904,(AYP10417_2014/08/22:0.14059,(AJA04398_2014/08/20:0.09487,((AYP10349_2014/08/22:0.00186,(AYP10358_2014/08/26:0.00101,(AYP10331_2014/09/08:0.00068,AKI84252_2014/08/16:0.00068)Inner2:0.00034)Inner5:0.00085)Inner7:0.00144,((AYG85355_2018/05/11:0.00203,AXP07378_2018/05/10:0.00203)Inner8:0.00127,((((AKB09542_1976/10/01:0.00068,APT69582_1976:0.00068)Inner3:0.00101,APT69541_1976:0.00169)Inner6:0.00573,((AWU50984_2017/05/07:0.00271,AKB09551_1995/04/01:0.00271)Inner9:0.00135,(AER59714_2007/08/31:0.00406,AJT59738_2003:0.00474)Inner11:0.00068)Inner12:0.00165)Inner13:0.00269,((AYN74100_2018/08/13:0.00101,(AYN74136_2018/08/14:0.00068,AYN74046_2018/07/27:0.00068)Inner1:0.00034)Inner4:0.00777,AGL73450_2012:0.19853)Inner15:0.09013)Inner14:0.00405)Inner10:0.00436)Inner16:0.04572)Inner17:0.05794)Inner18:0.26450)Inner20:0.00000;\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from Bio import AlignIO\n",
+    "from Bio import Phylo\n",
     "from Bio.Phylo.TreeConstruction import ParsimonyScorer, NNITreeSearcher, ParsimonyTreeConstructor\n",
     "\n",
     "# Read the alignment from the fasta file\n",
@@ -24,6 +76,11 @@
     "# Build the parsimony tree\n",
     "pars_tree = constructor.build_tree(aln)\n",
     "\n",
+    "# Print the tree in Newick format\n",
+    "newick_string = pars_tree.format(\"newick\")\n",
+    "\n",
+    "Phylo.draw_ascii(pars_tree)\n",
+    "print(newick_string)\n",
     "\n",
     "\n"
    ]
